<resources>
    <string name="app_name">Norton E-Commerce</string>
    <string name="google_map_api_key">AIzaSyAYOxGbk2y5b6TblCSHbbgs3zcS5meuTrE</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--<string name="FACEBOOK_APP_ID">1375528659218887</string>-->

    <string name="FACEBOOK_APP_ID">156194398367372</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">cdefae88b36c9fd56d1a8d960c66b32d</string>
    <string name="ak_login_protocol_scheme">ak156194398367372</string>

    <!--<string name="more_location">ទីតាំងបន្ថែម</string>-->
    <!--<string name="location">ទីតាំង</string>-->
    <!--<string name="email">អ៊ីម៉ែល</string>-->
    <!--<string name="phone_number">លេខទូរស័ព្ទ</string>-->
    <!--<string name="gender">ភេទ</string>-->
    <!--<string name="last_name">នាមត្រកូល</string>-->
    <!--<string name="first_name">ឈ្មោះ</string>-->
    <!--<string name="code">លេខសម្ងាត់</string>-->
    <!--<string name="submit">បញ្ជូន</string>-->

    <!--<string name="nav_home">ទំព័រដើម</string>-->
    <!--<string name="nav_categories">ប្រភេទ</string>-->
    <!--<string name="nav_account">គណនី</string>-->
    <!--<string name="nav_favorite">រក្សាទុក</string>-->
    <!--<string name="nav_change_language">ប្តូរភាសា</string>-->
    <!--<string name="nav_about_us">អំពីពួកយើង</string>-->
    <!--<string name="nav_settings">ផ្សេងៗ</string>-->
    <!--<string name="text_login">ចូលទៅគណនី</string>-->
    <!--<string name="text_register">បង្កើតគណនី</string>-->

    <!--<string name="tab_profile">គណនី</string>-->
    <!--<string name="tab_sold">បានផុសលក់</string>-->
    <!--<string name="tab_new_seller">អ្នកលក់ទំនិញថ្មីៗ</string>-->
    <!--<string name="tab_new_buyer">អ្នកទិញទំនិញថ្មីៗ</string>-->
    <!--<string name="tab_sell_product">ផុសលក់</string>-->
    <!--<string name="tab_buy_product">ផុសទិញ</string>-->
    <!--<string name="tab_bought">បានផុសទិញ</string>-->

    <!--<string name="text_product">ផលិតផល</string>-->
    <!--<string name="text_price">តម្លៃ:</string>-->
    <!--<string name="text_edit">កែរូប</string>-->
    <!--<string name="nav_bookmark_categories">Bookmark Categories</string>-->
    <!--<string name="nav_logout">ចាកចេញ</string>-->
    <!--<string name="text_edit_infor">កែប្រែ</string>-->
    <!--<string name="text_sold">បានដាក់លក់: 12</string>-->
    <!--<string name="text_bought">បានដាក់ទិញ: 12</string>-->
    <!--<string name="text_settings">ការកំណត់</string>-->


    <string name="more_location">More Location</string>
    <string name="location">Location</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="gender">Gender</string>
    <string name="last_name">First Name</string>
    <string name="first_name">Last Name</string>
    <string name="code">Password</string>
    <string name="submit">Submit</string>
    <string name="verification_code">Verification Code</string>
    <string name="text_sent_code">We sent 4 code to your phone number. Please enter your code from your message into box below</string>


    <string name="nav_home">Home</string>
    <string name="nav_categories">Categories</string>
    <string name="nav_account">Account</string>
    <string name="nav_favorite">Favorite</string>
    <string name="nav_change_language">Change Language</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_settings">Settings</string>
    <string name="text_login">Login Account</string>
    <string name="text_register">Register</string>


    <!--tab-->
    <string name="tab_profile">Account</string>
    <string name="tab_sold">Sold</string>
    <string name="tab_new_seller">New Seller</string>
    <string name="tab_new_buyer">New Buyer</string>
    <string name="tab_sell_product">Post to Sell</string>
    <string name="tab_buy_product">Post to Buy</string>
    <string name="tab_bought">Posted Buy</string>

    <!--text-->
    <string name="text_product">Product</string>
    <string name="text_price">Price:</string>
    <string name="text_edit">Edit Photo</string>
    <string name="nav_bookmark_categories">Bookmark Categories</string>
    <string name="nav_logout">Logout</string>
    <string name="text_edit_infor">Edit</string>
    <string name="text_sold">Posted Sell: 12</string>
    <string name="text_bought">Posted Buy: 12</string>
    <string name="text_settings">Settings</string>
    <string name="text_notification">Notification</string>
    <string name="text_change_language">Change Language</string>
    <string name="text_version">Version</string>
    <string name="text_clear_cache">Clear Cache</string>
    <string name="text_change_password">Change Password</string>
    <string name="text_account_information">Account Information</string>
    <string name="text_logout">Logout</string>
    <string name="text_edit_profile">Edit Profile</string>
    <string name="text_product_sold">Product Sold</string>
    <string name="text_product_bought">Product Bought</string>
    <string name="text_re_post_to_sell">Re Post to Sell</string>
    <string name="text_re_post_to_buy">Re post to buy</string>
    <string name="text_post_to_buy">Post to buy</string>
    <string name="text_post_to_sell">Post to sell</string>
    <string name="text_phone_number">Phone Number</string>
    <string name="text_login_email">Login Email</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
