<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="vichitpov.com.fbs.ui.activity.VerificationCodeActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/verification_code"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/sp_20" />

    <TextView
        android:id="@+id/text_view_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_5"
        android:gravity="center"
        android:text="093 795 224"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/sp_15" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_5"
        android:gravity="center"
        android:text="@string/text_sent_code"
        android:textColor="@color/colorHint"

        android:textSize="@dimen/sp_12" />

    <EditText
        android:id="@+id/edit_code"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@drawable/background_edit_text"
        android:hint="@string/code"
        android:padding="@dimen/dp_10"
        android:textAlignment="center"
        android:textSize="@dimen/sp_12" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/colorPrimary"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/sp_12" />


</LinearLayout>
